--- a/arch/arm64/configs/sdm660-perf_defconfig
+++ b/arch/arm64/configs/sdm660-perf_defconfig
@@ -24,6 +24,7 @@ CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_PERF=y
 CONFIG_CGROUP_HUGETLB=y
 CONFIG_CGROUP_NET_PRIO=y
+CONFIG_CGROUP_NS=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
