--- a/arch/arm64/configs/sdm660-perf_defconfig
+++ b/arch/arm64/configs/sdm660-perf_defconfig
@@ -3,6 +3,7 @@ CONFIG_LOCALVERSION="-perf"
 # CONFIG_USELIB is not set
 CONFIG_USER_NS=y
 CONFIG_AUDIT=y
+CONFIG_CGROUPS=y
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
