--- a/arch/arm64/configs/sdm660-perf_defconfig
+++ b/arch/arm64/configs/sdm660-perf_defconfig
@@ -27,7 +27,11 @@ CONFIG_UTS_NS=y
 CONFIG_IPC_NS=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
-
+CONFIG_CGROUPS=y
+CONFIG_CGROUP_CPU=y
+CONFIG_CGROUP_CPUSET=y
+CONFIG_CGROUP_MEMORY=y
+CONFIG_CGROUP_IO=y
 CONFIG_CPUSETS=y
 CONFIG_MEMCG=y
 CONFIG_KEYS=y
