--- a/arch/arm64/configs/sdm660-perf_defconfig
+++ b/arch/arm64/configs/sdm660-perf_defconfig
@@ -5,6 +5,7 @@ CONFIG_USER_NS=y
 CONFIG_AUDIT=y
 CONFIG_CGROUPS=y
 CONFIG_NAMESPACES=y
+CONFIG_DOCKER=y
 CONFIG_NET_NS=y
 CONFIG_PID_NS=y
 CONFIG_IPC_NS=y
